[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["Anas Kaarov <anasbinkurban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
drf-spectacular = "^0.27.2"
django-rest-swagger = "^2.2.0"
pillow = "^10.4.0"
django-cors-headers = "^4.5.0"
requests = "^2.32.3"
whitenoise = "^6.7.0"
django-filter = "^24.3"
django-4-jet = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
